2002-04-09  Earnie Boyd  <earnie@users.sf.net>

	* moldname-crtdll.def: Remove CR from end of line.
	* moldname-msvcrt.def: Ditto.
	* Makefile.in: Use bzip2 compression for Cygwin target.

2002-04-04  Danny Smith  <dannysmith@sourceforge.users.net>

	* include/math.h (DOMAIN, SING, OVERFLOW, UNDERFLOW,
	TLOSS, PLOSS): Move oldname defines back, following
	the underscored names.

2002-03-29  Danny Smith  <dannysmith@sourceforge.users.net>

	* include/stdio.h (_snwprintf): Correct spelling.
	(_vsnwprintf): Likewise.
	* include/wchar.h (_snwprintf): Correct spelling.
	(_vsnwprintf): Likewise.

2002-03-26  Danny Smith  <dannysmith@sourceforge.users.net>

	* moldname.def.in (__MSVCRT__): Replace with !(__CRTDLL__).
	(wpopen): Add if !(__CRTDLL__).
	* Makefile.in (moldname-msvcrt.def rule): Use -C, not -c to
	preserve comments.
	(moldname-crtdll.def rule): Likewise.
	* moldname-msvcrt.def: Regenerate.
	* moldname-crtdll.def: Regenerate.
	* include/stdio.h (wpopen):Use prototype, not a define.
	(_swnprintf): Add prototype.
	(_vswnprintf): Likewise.
	Tidy up whitespace.
	* include/wchar.h (_swnprintf): Add prototype.
	(_vswnprintf): Likewise.
	Tidy up whitespace.

2002-01-28  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/malloc.h (_heapinfo): Correct structure definition.
	(_USEDENTRY,_FREEENTRY): Add defines.
	Add comment on platform support for _heap* functions.
	(_get_sbh_threshold): Add prototype.
	(_set_sbh_threshold): Likewise.
	(_expand): Likewise.

2002-01-25  Danny Smith  <dannysmith@users.sourceforge.net>

	* profile/profil.c: Update copyright info.
	* profile/profil.h: Likewise.
	* profile/gcrt0.c: Likewise.

2002-01-25  Pascal Obry  <obry@gnat.com>

	* profile/profil.h (PROFADDR): Cast idx to unsigned long long to
	avoid overflow.
	* profile/gmon.c: Define bzero as memset if mingw32.
	(monstartup): Use it.

2002-01-25  Danny Smith  <dannysmith@users.sourceforge.net> 

	* include/tchar.h (_TCHAR): Add missing ;.
